# assertiterables

./: .coveragerc  .gitignore  LICENSE.txt  README.md  conftest.py  pyproject.toml
.github/workflows/: python-package.yml
assertiterables/: __about__.py  __init__.py  _simple.py  assert_collection.py  foo.py  helpers.py  iterables.py
tests/: __init__.py  test__simple.py  test_assert_collection.py  test_helpers.py  test_iterables.py
tests/iterable/: test_simple_tests.py
