[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "assertiterables"
version = "0.0.1"

authors = [
  { name="Stefan McKinnon Edwards", email="sme@iysik.com" },
]

description = "Routines for easier testing iterables in pytest."
readme = "README.md"
requires-python = ">=3.8"

keywords = [
  "unittest", "iterable", "assertion"
]

license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
  "pytest~=8.3",
]

dev = [
  "pytest",
  "pytest-xdist",
  "coverage",
]

classifiers = [
  "Development Status :: 1 - Planning",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Testing :: Unit",
]

[project.urls]
Documentation = "https://github.com/pypa/sampleproject/Readme"
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"


[tool.hatch.version]
path = "src/assertiterables/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/assertiterables tests}"

[tool.pytest.ini_options]
addopts = "--cov=assertiterables --cov-report term --cov-report xml:coverage.xml --cov-config=.coveragerc"
